--- a/Views/adminViews/adminLogin.hbs
+++ b/Views/adminViews/adminLogin.hbs
@@ -14,7 +14,7 @@
 		<div class="row">
 			<div class="col-md-3"></div>
 			<div class="col-md-lg-6 main">
-				<img src="img/logo.png" alt="">	
+				{{!-- <img src="img/logo.png" alt="">	 --}}
 				<h1 class="logo">Pro<span>Gear</span> </h1>
 				<form action="/admin/login" method="post">
 					<h1 class="heading">Admin Login</h1><br>
