--- a/Views/adminViews/productManagement.hbs
+++ b/Views/adminViews/productManagement.hbs
@@ -131,9 +131,11 @@
                   <input type="text" class="form-control" placeholder="Search products">
                 </form>
               </li>
-               <div class="preview-item-content">
-              <a class="preview-subject mb-1" href="/admin/logout">Logout</a>
-            </div>
+            </ul>
+            <ul class="navbar-nav navbar-nav-right">
+              <li class="nav-item dropdown d-none d-lg-block">
+                <a class="nav-link btn btn-success create-new-button" id="createbuttonDropdown"  aria-expanded="false" href="/admin/logout">Logout</a>
+              </li> 
             </ul>
             <button class="navbar-toggler navbar-toggler-right d-lg-none align-self-center" type="button" data-toggle="offcanvas">
               <span class="mdi mdi-format-line-spacing"></span>
@@ -177,7 +179,7 @@
                           </tr>
                         </thead>
                         <tbody>
-                          {{#each find}}
+                          {{#each find }}
                           <tr>
                             <td style="height: 200px; width:200px">
                                 <i class="fab fa-angular fa-lg text-danger me-3">
@@ -187,8 +189,8 @@
                             </td>
                             <td>{{name}}</td>
                             <td>{{brand}}</td>
-                            <td>{{category}}</td>
-                            <td> Price </td>
+                            <td>{{category.name}}</td>
+                            <td> {{price}} </td>
                             <td><a href="/admin/updateProduct?userid={{_id}}"><i class="mdi mdi-border-color"></i></a></td>
 							              <td><a href="/admin/delete?userid={{_id}}"><i class="mdi mdi-delete"></i></a></td>
                           </tr>
