--- a/Views/adminViews/updateProduct.hbs
+++ b/Views/adminViews/updateProduct.hbs
@@ -117,38 +117,85 @@
       <!-- partial -->
       <div class="container-fluid page-body-wrapper">
         <!-- partial:../../partials/_navbar.html -->
-       
+        <nav class="navbar p-0 fixed-top d-flex flex-row">
+          <div class="navbar-brand-wrapper d-flex d-lg-none align-items-center justify-content-center">
+            <a class="navbar-brand brand-logo-mini" href="../../index.html"><img src="../../assets/images/logo-mini.svg" alt="logo" /></a>
+          </div>
+          <div class="navbar-menu-wrapper flex-grow d-flex align-items-stretch">
+            <button class="navbar-toggler navbar-toggler align-self-center" type="button" data-toggle="minimize">
+              <span class="mdi mdi-menu"></span>
+            </button>
+            <ul class="navbar-nav w-100">
+              <li class="nav-item w-100">
+                <form class="nav-link mt-2 mt-md-0 d-none d-lg-flex search">
+                  <input type="text" class="form-control" placeholder="Search products">
+                </form>
+              </li>
+            </ul>
+            <ul class="navbar-nav navbar-nav-right">
+              <li class="nav-item dropdown d-none d-lg-block">
+                <a class="nav-link btn btn-success create-new-button" id="createbuttonDropdown" data-toggle="dropdown" aria-expanded="false" href="#">Logout</a>
+              </li> 
+            </ul>
+            <button class="navbar-toggler navbar-toggler-right d-lg-none align-self-center" type="button" data-toggle="offcanvas">
+              <span class="mdi mdi-format-line-spacing"></span>
+            </button>
+          </div>
+        </nav>
         <!-- partial -->
           <div class="main-panel">
           <div class="content-wrapper">
             <div class="page-header">
-              <h3 class="page-title"> Form elements </h3>
+              <h3 class="page-title"> Product Management </h3>
               <nav aria-label="breadcrumb">
                 <ol class="breadcrumb">
-                  <li class="breadcrumb-item"><a href="#">Forms</a></li>
-                  <li class="breadcrumb-item active" aria-current="page">Form elements</li>
+                  <li class="breadcrumb-item"><a href="/admin/product"> Product Management </a></li>
+                  <li class="breadcrumb-item active" aria-current="page">Update Product</li>
                 </ol>
               </nav>
             </div>
             <div class="row">
-             <div class="col-md-lg-6 grid-margin stretch-card ">
+             <div class="col-8 grid-margin stretch-card ">
                 <div class="card col-lg-6">
                   <div class="card-body">
-                    <h4 class="card-title">Input size</h4>
+                    <h4 class="card-title">Edit the details of existing product</h4>
                     {{!-- <p class="card-description"> Add classes like <code>.form-control-lg</code> and <code>.form-control-sm</code>. </p> --}}
-                    <form class="forms-sample" action="/admin/update" method="post">
+                    <form class="forms-sample" action="/admin/addProduct" method="POST" enctype="multipart/form-data">
+                      <div class="form-group">
+                        <label for="exampleInputName1">Name</label>
+                        <input type="text" class="form-control" id="exampleInputName1" placeholder="Name" name="name" value="{{product.name}}">
+                      </div>
+                      <div class="form-group">
+                        <label for="exampleInputEmail3">Brand</label>
+                        <input type="text" class="form-control" id="exampleInputEmail3" placeholder="Brand" name="brand" value="{{product.brand}}">
+                      </div>
+                      <div class="form-group">
+                        <label for="exampleSelectGender">Category</label>     
+                        <select class="form-control" id="exampleSelectGender" name="category">
+                            {{#each category}}
+                                <option value="{{_id}}">{{name}}</option>
+                            {{/each}}
+                        </select>
+                      </div>
+                      <div class="form-group">
+                        <label for="exampleInputEmail3">Price</label>
+                        <input type="number" class="form-control" id="exampleInputEmail3" placeholder="Price" name="price" value="{{product.price}}">
+                      </div>
+                      <br>
+                        <div class="form-group">
+                            <label for="productImage">Product Image:</label>
+                            <input type="file" class="form-control" name="image" id="image">
 
-                    <div class="form-group">
-                      <label>Name</label>
-                      <input type="text" class="form-control form-control-lg" placeholder="Username" aria-label="Username" value="{{userdata.fname}}" name="fname">
-                    </div>
-                    <div class="form-group">
-                      <label>E-mail</label>
-                      <input type="text" class="form-control form-control-lg" placeholder="Username" aria-label="Username " value="{{userdata.email}}" name="email">
-                    </div>
-                        <input type="hidden"  name="id" value="{{userdata._id}}">
-                     <button type="submit" class="btn btn-primary mr-2">Submit</button>
-                       </form>
+                        </div>
+
+                      <div class="form-group">
+                        <label for="exampleTextarea1">Description</label>
+                        <textarea class="form-control" id="exampleTextarea1" rows="4" name="description">{{product.description}}</textarea>
+                      </div>
+                      <button type="submit" class="btn btn-primary mr-2">Submit</button>
+                      <button class="btn btn-dark">Cancel</button>
+                    </form>
+                       
                   </div>
                 </div>
               </div>
@@ -158,12 +205,12 @@
           </div>
           <!-- content-wrapper ends -->
           <!-- partial:../../partials/_footer.html -->
-          <footer class="footer">
+          {{!-- <footer class="footer">
             <div class="d-sm-flex justify-content-center justify-content-sm-between">
               <span class="text-muted d-block text-center text-sm-left d-sm-inline-block">Copyright © bootstrapdash.com 2020</span>
               <span class="float-none float-sm-right d-block mt-1 mt-sm-0 text-center"> Free <a href="https://www.bootstrapdash.com/bootstrap-admin-template/" target="_blank">Bootstrap admin templates</a> from Bootstrapdash.com</span>
             </div>
-          </footer>
+          </footer> --}}
           <!-- partial -->
         </div>
         <!-- main-panel ends -->
