--- a/Views/adminViews/userManagement.hbs
+++ b/Views/adminViews/userManagement.hbs
@@ -131,7 +131,12 @@
                   <input type="text" class="form-control" placeholder="Search products">
                 </form>
               </li>
-              <a class="preview-subject mb-1" href="/admin/logout">Logout</a>
+
+            </ul>
+            <ul class="navbar-nav navbar-nav-right">
+              <li class="nav-item dropdown d-none d-lg-block">
+                <a class="nav-link btn btn-success create-new-button" id="createbuttonDropdown" aria-expanded="false" href="/admin/logout">Logout</a>
+              </li> 
             </ul>
             <button class="navbar-toggler navbar-toggler-right d-lg-none align-self-center" type="button" data-toggle="offcanvas">
               <span class="mdi mdi-format-line-spacing"></span>
@@ -145,8 +150,8 @@
               <h3 class="page-title"> User Management </h3>
               <nav aria-label="breadcrumb">
                 <ol class="breadcrumb">
-                  <li class="breadcrumb-item"><a href="#">Tables</a></li>
-                  <li class="breadcrumb-item active" aria-current="page">Basic tables</li>
+                  {{!-- <li class="breadcrumb-item"><a href="#">Tables</a></li>
+                  <li class="breadcrumb-item active" aria-current="page">Basic tables</li> --}}
                 </ol>
               </nav>
             </div>
