--- a/Public/css/main.css
+++ b/Public/css/main.css
@@ -117,13 +117,15 @@
 
 body {
   line-height: 24px;
-  font-size: 14px;
+  font-size: 16px;
   font-family: "Roboto", sans-serif;
   font-weight: 400;
   color: #cecece;
   /* background: #393939;} */
   background: #181a1e; }
-
+*{
+  font-size: large;
+}
 html,
 body {
   height: 100%; }
@@ -1358,7 +1360,7 @@ h1, h2, h3, h4, h5, h6 {
   margin-bottom: 0; }
 
 .features-inner {
-  box-shadow: 0 10px 30px rgba(255, 255, 255, 0.2);
+  box-shadow: 0 10px 30px rgba(255, 255, 255, 0.1);
   padding: 40px 0; }
 
 .single-features {
@@ -3904,7 +3906,7 @@ label {
   .s_product_text h3 {
     font-size: 24px;
     font-weight: 500;
-    color: #222222;
+    color: #fff;
     margin-bottom: 10px; }
   .s_product_text h2 {
     font-size: 24px;
