--- a/Views/adminViews/addProduct.hbs
+++ b/Views/adminViews/addProduct.hbs
@@ -4,7 +4,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Corona Admin</title>
+    <title>ProGear Admin</title>
     <!-- plugins:css -->
     <link rel="stylesheet" href="../../assets/vendors/mdi/css/materialdesignicons.min.css">
     <link rel="stylesheet" href="../../assets/vendors/css/vendor.bundle.base.css">
@@ -111,7 +111,7 @@
               </span>
               <span class="menu-title">Category</span>
             </a>
-          </li>
+          </li> 
         </ul>
       </nav>
       <!-- partial -->
@@ -192,10 +192,19 @@
                         </div>
                       </div> --}}
                         <div class="form-group">
-                            <label for="productImage">Product Image:</label>
-                            <input type="file" class="form-control" name="image" id="image">
-
+                            <label for="productImage">Product Main Image:</label>
+                            <input type="file" class="form-control" name="images" id="image"> 
                         </div>
+                        <br> 
+                        <div class="form-group">
+                            <label for="productImage">Product Sub Images:</label>
+                            <input type="file" class="form-control" required multiple name="images" id="image"> 
+                        </div>
+                        {{!-- <br> --}}
+                        {{!-- <div class="form-group">
+                            <label for="productImage">Product Sub Image 2:</label>
+                            <input type="file" class="form-control" name="image" id="image"> 
+                        </div> --}}
 
                       <div class="form-group">
                         <label for="exampleTextarea1">Description</label>
@@ -238,4 +247,4 @@
     <!-- Custom js for this page -->
     <!-- End custom js for this page -->
   </body>
-</html>
+</html>    
