--- a/Views/adminViews/updateProduct.hbs
+++ b/Views/adminViews/updateProduct.hbs
@@ -160,7 +160,7 @@
                   <div class="card-body">
                     <h4 class="card-title">Edit the details of existing product</h4>
                     {{!-- <p class="card-description"> Add classes like <code>.form-control-lg</code> and <code>.form-control-sm</code>. </p> --}}
-                    <form class="forms-sample" action="/admin/addProduct" method="POST" enctype="multipart/form-data">
+                    <form class="forms-sample" action="/admin/updateProduct" method="POST" enctype="multipart/form-data">
                       <div class="form-group">
                         <label for="exampleInputName1">Name</label>
                         <input type="text" class="form-control" id="exampleInputName1" placeholder="Name" name="name" value="{{product.name}}">
@@ -185,13 +185,12 @@
                         <div class="form-group">
                             <label for="productImage">Product Image:</label>
                             <input type="file" class="form-control" name="image" id="image">
-
                         </div>
-
                       <div class="form-group">
                         <label for="exampleTextarea1">Description</label>
                         <textarea class="form-control" id="exampleTextarea1" rows="4" name="description">{{product.description}}</textarea>
                       </div>
+                       <input type="hidden"  name="id" value="{{product._id}}">
                       <button type="submit" class="btn btn-primary mr-2">Submit</button>
                       <button class="btn btn-dark">Cancel</button>
                     </form>
