--- a/Views/adminViews/addProduct.hbs
+++ b/Views/adminViews/addProduct.hbs
@@ -193,12 +193,12 @@
                       </div> --}}
                         <div class="form-group">
                             <label for="productImage">Product Main Image:</label>
-                            <input type="file" class="form-control" name="images" id="image"> 
+                            <input type="file" class="form-control" name="image1" id="image"> 
                         </div>
                         <br> 
                         <div class="form-group">
                             <label for="productImage">Product Sub Images:</label>
-                            <input type="file" class="form-control" required multiple name="images" id="image"> 
+                            <input type="file" class="form-control" required multiple name="image2" id="image"> 
                         </div>
                         {{!-- <br> --}}
                         {{!-- <div class="form-group">
