--- a/Views/adminViews/productManagement.hbs
+++ b/Views/adminViews/productManagement.hbs
@@ -162,7 +162,7 @@
               <div class="col-lg-12 grid-margin stretch-card">
                 <div class="card">
                   <div class="card-body">
-                    <h4 class="card-title">Product List List</h4>
+                    <h4 class="card-title">Product List </h4>
                     {{!-- <p class="card-description"> Add class <code>.table-striped</code> --}}
                     </p>
                      <div class="table-responsive">
@@ -190,7 +190,7 @@
                             <td>{{name}}</td>
                             <td>{{brand}}</td>
                             <td>{{category.name}}</td>
-                            <td> {{price}} </td>
+                            <td>&#8377; {{price}} </td>
                             <td><a href="/admin/updateProduct?userid={{_id}}"><i class="mdi mdi-border-color"></i></a></td>
 							              <td><a href="/admin/deleteProduct?userid={{_id}}"><i class="mdi mdi-delete"></i></a></td>
                           </tr>
@@ -229,6 +229,7 @@
     <script src="../../assets/js/misc.js"></script>
     <script src="../../assets/js/settings.js"></script>
     <script src="../../assets/js/todolist.js"></script>
+    
     <!-- endinject -->
     <!-- Custom js for this page -->
     <!-- End custom js for this page -->
