--- a/Views/userViews/checkout.hbs
+++ b/Views/userViews/checkout.hbs
@@ -48,7 +48,7 @@
 					<!-- Collect the nav links, forms, and other content for toggling -->
 					<div class="collapse navbar-collapse offset" id="navbarSupportedContent">
 						<ul class="nav navbar-nav menu_nav ml-auto">
-							<li class="nav-item active"><a class="nav-link" href="/landing">Home</a></li>
+							<li class="nav-item active"><a class="nav-link" href="/">Home</a></li>
 							<li class="nav-item submenu dropdown">
 								<a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
 								 aria-expanded="false">Category</a>
@@ -92,7 +92,7 @@
                 <div class="col-first">
                     <h1>Checkout</h1>
                     <nav class="d-flex align-items-center">
-                        <a href="index.html">Home<span class="lnr lnr-arrow-right"></span></a>
+                        <a href="/">Home<span class="lnr lnr-arrow-right"></span></a>
                         <a href="single-product.html">Checkout</a>
                     </nav>
                 </div>
@@ -105,12 +105,12 @@
     <section class="checkout_area section_gap">
         <div class="container">
             <div class="returning_customer">
-                <div class="check_title">
+                {{!-- <div class="check_title">
                     <h2>Returning Customer? <a href="#">Click here to login</a></h2>
-                </div>
-                <p>If you have shopped with us before, please enter your details in the boxes below. If you are a new
-                    customer, please proceed to the Billing & Shipping section.</p>
-                <form class="row contact_form" action="#" method="post" novalidate="novalidate">
+                </div> --}}
+                {{!-- <p>If you have shopped with us before, please enter your details in the boxes below. If you are a new
+                    customer, please proceed to the Billing & Shipping section.</p> --}}
+                {{!-- <form class="row contact_form" action="#" method="post" novalidate="novalidate">
                     <div class="col-md-6 form-group p_star">
                         <input type="text" class="form-control" id="name" name="name">
                         <span class="placeholder" data-placeholder="Username or Email"></span>
@@ -127,11 +127,11 @@
                         </div>
                         <a class="lost_pass" href="#">Lost your password?</a>
                     </div>
-                </form>
+                </form> --}}
             </div>
             <div class="cupon_area">
                 <div class="check_title">
-                    <h2>Have a coupon? <a href="#">Click here to enter your code</a></h2>
+                    {{!-- <h2>Have a coupon? <a href="#">Click here to enter your code</a></h2> --}}
                 </div>
                 <input type="text" placeholder="Enter coupon code">
                 <a class="tp_btn" href="#">Apply Coupon</a>
@@ -149,9 +149,7 @@
                                 <input type="text" class="form-control" id="last" name="name">
                                 <span class="placeholder" data-placeholder="Last name"></span>
                             </div>
-                            <div class="col-md-12 form-group">
-                                <input type="text" class="form-control" id="company" name="company" placeholder="Company name">
-                            </div>
+                          
                             <div class="col-md-6 form-group p_star">
                                 <input type="text" class="form-control" id="number" name="number">
                                 <span class="placeholder" data-placeholder="Phone number"></span>
@@ -190,10 +188,10 @@
                                 <input type="text" class="form-control" id="zip" name="zip" placeholder="Postcode/ZIP">
                             </div>
                             <div class="col-md-12 form-group">
-                                <div class="creat_account">
+                                {{!-- <div class="creat_account">
                                     <input type="checkbox" id="f-option2" name="selector">
                                     <label for="f-option2">Create an account?</label>
-                                </div>
+                                </div> --}}
                             </div>
                             <div class="col-md-12 form-group">
                                 <div class="creat_account">
