--- a/Views/userViews/product.hbs
+++ b/Views/userViews/product.hbs
@@ -128,9 +128,10 @@
 							<li><a class="active" href="#"><span>Category</span> : {{product.category.name}}</a></li>
 							<li><a href="#"><span>Availibility</span> : In Stock</a></li>
 						</ul>
-						<p>Mill Oil is an innovative oil filled radiator with the most modern technology. If you are looking for
-							something that can make your interior look awesome, and at the same time give you the pleasant warm feeling
-							during the winter.</p>
+						<p>Designed with avid gamers in mind, this cutting-edge device offers a host of features 
+							 capabilities to take your gaming experience to new heights.Unleash your gaming prowess, 
+							 conquer new challenges, and experience the thrill of gaming at its finest. Elevate your 
+							 gaming experience with the ultimate gaming gadget that takes you beyond imagination.</p>
 						<div class="product_count">
 							<label for="qty">Quantity:</label>
 							<input type="text" name="qty" id="sst" maxlength="12" value="1" title="Quantity:" class="input-text qty">
