--- a/Views/userViews/cart.hbs
+++ b/Views/userViews/cart.hbs
@@ -116,20 +116,23 @@
                             </tr>
                         </thead>
                         <tbody>
+                                  {{!-- {{#each cart}}
                             <tr>
+                          
                                 <td>
                                     <div class="media">
                                         <div class="d-flex">
-                                            <img src="../product-images/{{product.image.[0]}}" alt="" style="height: 100px; width :100px">
+                                            <img src="../product-images/{{cart.[0].product.image.[0]}}" alt="" style="height: 100px; width :100px">
                                         </div>
                                         <div class="media-body">
-                                            <p>{{cart.product.product_id.name}}</p>
+                                           <p>{{cart.[0].product.name}}</p>
+
 
                                         </div>
                                     </div>
                                 </td>
                                 <td>
-                                    <h5>$360.00</h5>
+                                    <h5>{{cart.[0].product.price}}</h5>
                                 </td>
                                 <td>
                                     <div class="product_count">
@@ -144,7 +147,41 @@
                                 <td>
                                     <h5>$720.00</h5>
                                 </td>
+                            
                             </tr>
+                                {{/each}} --}}
+
+                                {{#each cart}}
+<tr>
+    <td>
+        <div class="media">
+            <div class="d-flex">
+                <img src="../product-images/{{this.product.image.[0]}}" alt="" style="height: 100px; width: 100px">
+            </div>
+            <div class="media-body">
+                <p>{{this.product.name}}</p>
+            </div>
+        </div>
+    </td>
+    <td>
+        <h5>&#8377;{{this.product.price}}</h5>
+    </td>
+    <td>
+        <div class="product_count">
+            <input type="text" name="qty" id="sst" maxlength="12" value="1" title="Quantity:" class="input-text qty">
+            <button onclick="var result = document.getElementById('sst'); var sst = result.value; if(!isNaN(sst)) result.value++; return false;" class="increase items-count" type="button"><i class="lnr lnr-chevron-up"></i></button>
+            <button onclick="var result = document.getElementById('sst'); var sst = result.value; if(!isNaN(sst) && sst > 0) result.value--; return false;" class="reduced items-count" type="button"><i class="lnr lnr-chevron-down"></i></button>
+        </div>
+    </td>
+    <td>
+        <h5>$720.00</h5>
+    </td>
+</tr>
+{{/each}}
+
+
+
+{{!--                             
                             <tr>
                                 <td>
                                     <div class="media">
@@ -200,7 +237,7 @@
                                 <td>
                                     <h5>$720.00</h5>
                                 </td>
-                            </tr>
+                            </tr> --}}
                             <tr class="bottom_button">
                                 <td>
                                     <a class="gray_btn" href="#">Update Cart</a>
